@@ -1,23 +1,0 @@
-package com.github.scribejava.apis.service;
-
-import com.github.scribejava.core.builder.api.DefaultApi20;
-import com.github.scribejava.core.httpclient.HttpClient;
-import com.github.scribejava.core.httpclient.HttpClientConfig;
-import com.github.scribejava.core.model.OAuth2AccessToken;
-import com.github.scribejava.core.model.OAuthConstants;
-import com.github.scribejava.core.model.OAuthRequest;
-import com.github.scribejava.core.oauth.OAuth20Service;
-
-public class DiscordService extends OAuth20Service {
-    public DiscordService(DefaultApi20 api, String apiKey, String apiSecret, String callback,
-                          String scope, String state, String responseType, String userAgent,
-                          HttpClientConfig httpClientConfig, HttpClient httpClient) {
-        super(api, apiKey, apiSecret, callback, scope, state, responseType, userAgent, httpClientConfig, httpClient);
-    }
-
-    @Override
-    public void signRequest(OAuth2AccessToken accessToken, OAuthRequest request) {
-        request.addHeader(OAuthConstants.HEADER, accessToken.getTokenType() + ' ' + accessToken.getAccessToken());
-    }
-
-}
